public/outLog.txt
src/sketch.ino: In function 'void loop()':
src/sketch.ino:75:1: error: 'dyhg' was not declared in this scope
 dyhg
 ^
src/sketch.ino:79:3: error: expected ';' before '}' token
   }
   ^
make: *** [.build/uno/src/sketch.o] Error 1


avrdude: stk500_getparm(): (a) protocol error, expect=0x14, resp=0x00

avrdude: stk500_getparm(): (a) protocol error, expect=0x14, resp=0x00
avrdude: stk500_initialize(): (a) protocol error, expect=0x14, resp=0x00
avrdude: initialization failed, rc=-1
         Double check connections and try again, or use -F to override
         this check.

avrdude: stk500_disable(): protocol error, expect=0x14, resp=0x00

avrdude done.  Thank you.

